tests/paczka1/small_fuzzy/17268420.err
Error in line 2: l6XiVOMRSls S608 66,8
Error in line 5: S608 A885 50,4
Error in line 10: S608 A773 64,2
